@@ -15,9 +15,9 @@
 \method{plot}{stepfun}(x, xval, xlim, ylim,
      xlab = "x", ylab = "f(x)", main = NULL,
      add = FALSE, verticals = TRUE, do.points = TRUE,
-     pch = par("pch"),
-     col.points = par("col"), cex.points = par("cex"),
-     col.hor = par("col"), col.vert = par("col"),
+     pch = par("pch"), col = par("col"),
+     col.points = col, cex.points = par("cex"),
+     col.hor = col, col.vert = col,
      lty = par("lty"), lwd = par("lwd"), \dots)
 
 \method{lines}{stepfun}(x, \dots)
@@ -35,6 +35,7 @@
   \item{do.points}{logical;  if \code{true}, also draw points at the
     (\code{xlim} restricted) knot locations.}
   \item{pch}{character; point character if \code{do.points}.}
+  \item{col}{default color of all points and lines.}
   \item{col.points}{character or integer code; color of points if
     \code{do.points}.}
   \item{cex.points}{numeric; character expansion factor if \code{do.points}.}
@@ -66,14 +67,13 @@ sfun1  <- stepfun(1:3, y0, right = TRUE)
 tt <- seq(0,3, by=0.1)
 op <- par(mfrow=c(2,2))
 plot(sfun0); plot(sfun0, xval=tt, add=TRUE, col.hor="bisque")
-plot(sfun.2);plot(sfun.2,xval=tt, add=TRUE, col.hor="orange")
+plot(sfun.2);plot(sfun.2,xval=tt, add=TRUE, col = "orange")# all colors
 plot(sfun1);lines(sfun1, xval=tt, col.hor="coral")
 ##-- This is  revealing :
 plot(sfun0, verticals= FALSE,
      main = "stepfun(x, y0, f=f)  for f = 0, .2, 1")
 for(i in 1:3)
-  lines(list(sfun0,sfun.2,stepfun(1:3,y0,f = 1))[[i]],
-       col.hor=i, col.vert=i)
+  lines(list(sfun0,sfun.2,stepfun(1:3,y0,f = 1))[[i]], col=i)
 legend(2.5, 1.9, paste("f =", c(0,0.2,1)), col=1:3, lty=1, y.intersp=1)
 par(op)
 
